src/components/Signup.less
@import "../styles/screen-sizes";

.signup-bg-left {
  position: fixed;
  height: 100%;
  width: 50%;
  top: 0;
  z-index: -1;
  left: 0;
  background: #fff;
}

.signup-bg-right {
  position: fixed;
  height: 100%;
  width: 50%;
  top: 0;
  z-index: -1;
  right: 0;
  background: #fafbfb;

  @media (max-width: @screen-md) {
    display: none;
  }
}

.Signup_main {
  height: 100%;
}

.Signup__container {
  display: flex;
  align-items: center;
  justify-content: space-around;
  height: 100%;
  min-height: 570px;
  max-width: 1000px;
  margin: 0 auto;

  .Signup__form, .Signup__icons {
    max-width: 500px;
    min-height: 600px;
    width: 100%;
    padding: 50px 60px 50px 50px;
    margin-bottom: 50px;
  }

  .Signup__icons {
    text-align: center;
    display: flex;
    align-content: center;
    align-items: center;
    margin-top: 50px;

    @media (max-width: @screen-md) {
      display: none;
    }
  }

  .Signup__header {
    display: flex;
    justify-content: space-between;
    min-height: 50px;
    flex: 1;
    align-items: flex-start;

    .Signup__steps {
      display: flex;
      align-items: center;
      margin-top: 15px;

      .Signup__steps-step {
        width: 10px;
        height: 10px;
        line-height: 14px;
        background: #eff4f8;
        display: inline-block;
        border-radius: 5px;
        margin-right: 8px;

        &:last-child {
          margin-right: 0;
        }

        &.waiting {
          width: 14px;
          height: 14px;
          line-height: 14px;
          border-radius: 7px;
          background: #4ba2f2;
        }

        &.processed {
          background: #4ba2f2;
        }
      }
    }
  }

  .Signup__form {
    min-height: 600px;
    position: relative;
    display: flex;
    flex-direction: column;

    .form-actions {
      position: absolute;
      bottom: 0;
      width: calc(~'100% - 110px');
      max-width: 390px;
    }

    .form-content {
      max-height: 100%;
      flex: 1;
    }

    .ant-input {
      color: rgba(51, 51, 51, 0.5);
    }

    .ant-form-item {
      margin-bottom: 10px;
    }

    .ant-btn-primary {
      background-color: #4ba2f2;
      border-color: #4ba2f2;
      box-shadow: 0 3px 8px 0 rgba(26, 80, 153, 0.3);
    }

    .ant-select-selection-selected-value {
      color: #333;
      margin-left: 15px;
      font-weight: 600;
    }

    .has-success.has-feedback:after, .has-warning.has-feedback:after, .has-error.has-feedback:after, .is-validating.has-feedback:after {
      font-size: 18px;
    }

    .has-success {
      input {
        background: #fafff8;
        border: 1px solid #88d569;
      }
    }

    .has-error {
      input {
        background: #fff9f9;
        border: 1px solid #f2564b;
      }
    }

    h1 {
      font-size: 28px;
      color: #333;
    }

    h2 {
      font-size: 18px;
      font-weight: 500;
      color: #333;
      padding-bottom: 30px;

      a {
        font-size: 14px;
      }
    }

    .ant-form-item-control {
      text-align: center;
    }

    button.back {
      color: #4ba2f2;
      background: none;
      font-size: 16px;

      &:hover {
        color: #4ba2f2;
      }
    }

    .confirm-phone, .password-step {
      .ant-input-affix-wrapper .ant-input:not(:last-child) {
        padding-right: 100px;
      }
      .has-success.has-feedback:after, .has-warning.has-feedback:after, .has-error.has-feedback:after, .is-validating.has-feedback:after {
        right: 60px;
      }
    }
    a.new-password {
      text-align: center;
      width: 100%;
      background-color: #fff;
      border: solid 2px #4ba2f2;
      font-size: 16px;
      font-weight: bold;
      text-transform: uppercase;
      height: 50px;
      color: #4ba2f2;
      display: block;
      border-radius: 5px;
    }

    a.complete-signup {
      background-color: #4ba2f2;
      border-color: #4ba2f2;
      box-shadow: 0 3px 8px 0 rgba(26, 80, 153, 0.3);
      width: 100%;
      color: #fff;
      display: block;
      padding: 0 1.5em;
      font-size: 20px;
      border-radius: 4px;
      height: 50px;
      text-align: center;
      line-height: 50px;

      &:hover {
        text-decoration: none;
        box-shadow: none !important;
      }
    }
  }
}

#signup-username {
  width: 392px;
  height: auto;
}

#signup-password {
  width: 392px;
  height: auto;
}

#signup-email {
  width: 300px;
  height: auto;
}

#signup-email-confirmation {
  width: 382px;
  height: auto;
}

#signup-phone, #signup-sms {
  width: 369px;
  height: auto;
}
#signup-create-account {
  width: 320px;
  height: auto;
}

